LYF: .docs-toc fixed iPhone 6 glitch which applies to all docs-toc but does not disrput non iphone 6.

--- a/themes/academicmin/assets/scss/custom.scss
+++ b/themes/academicmin/assets/scss/custom.scss
@@ -536,7 +536,9 @@ body {
     top: $navbarHeight;
   }
 }
-// Docs Table of contents
+//
+// Docs Table of contents for right-side on larger screens
+//
 .nav.toc-top {
   border-left: 4px solid $sta-primary;
   a {
@@ -571,6 +573,13 @@ body {
 //
 // Docs: Content
 //
+
+// Applies to all docs-toc and does not disrupt non iphone6
+.docs-toc {
+  top: 0 !important; // iphone 6 
+  height: 100% !important; // iphone 6
+}
+
 .docs-content {
   margin-left: auto; // due to being flexbox child -> grow margin
   flex: unset !important;
@@ -579,6 +588,7 @@ body {
   article {
     background: white;
   }
+
   @media (min-width: 768px) {
     article {
       padding: .25rem 2rem;
